agrego degradado en el texto download

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -90,14 +90,20 @@
         </div>
       </section>
     </main>
+    <!-- Footer Section Start From Here -->
+    <!-- acá implementé grid y flexbox-->
     <footer>
       <div class="footer_intro">
-        <div class="container">
-          <h4 class="footer_title">Buscanos en las redes</h4>
-          <p class="footer_text">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-          </p>
-          <div class="footer_icons">
+        <img
+          class="logo"
+          src="../imagen/g14_profile_c4-removebg-preview.png"
+          alt="logo"
+        />
+        <h4 class="footer_title">Buscanos en las redes</h4>
+        <p class="footer_text1">contactate con nosotros</p>
+        <p class="footer_text2">pedi por pedidos ya</p>
+        <div class="footer_icons">
+          <div class="footer_icons_flex">
             <img src="../imagen/facebook.svg" alt="logo facebook" />
             <img src="../imagen/instagram.svg" alt="logo instagram" />
             <img src="../imagen/twitter.svg" alt="logo twitter" />
@@ -105,10 +111,12 @@
         </div>
         <div class="footer_copyright">
           <p>
-            copyrigth2022 <a href="#">logoipsum</a> Creado por Nicolás Solari
+            copyrigth2022 <a href="#">volver al indice</a> Creado por Nicolás
+            Solari
           </p>
         </div>
       </div>
     </footer>
+    <!-- Footer Section End Here -->
   </body>
 </html>
