correcciones del contacto, correcciones a sass

--- a/index.html
+++ b/index.html
@@ -4,12 +4,20 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="fabrica de churros. Especializada en gustos exóticos, como leberwurst, Roquefort, Nutella, etc."
+    />
+    <meta
+      name="keywords"
+      content="churros, churros el topo, Fabrica de churros, churros salados, churro relleno"
+    />
     <link
       rel="shortcut icon"
       href="imagen/favoritochurros.png"
       type="image/x-icon"
     />
-    <link rel="stylesheet" href="./CSS/style.css" />
+    <link rel="stylesheet" href="/CSS/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap"
       rel="stylesheet"
@@ -62,8 +70,7 @@
             <article>
               <h3 class="subtitule">A churros el topo</h3>
               <p class="text_2">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
-                autem earum voluptatibus, nisi pariatur quidem?
+                Los más ricos y deliciosos churros del mundo.
               </p>
             </article>
           </div>
@@ -99,7 +106,7 @@
         />
         <h4 class="footer_title">Buscanos en las redes</h4>
         <p class="footer_text1">contactate con nosotros</p>
-        <p class="footer_text2">pedi por pedidos ya</p>
+        <p class="footer_text2">pedi por pedido ya</p>
         <div class="footer_icons">
           <div class="footer_icons_flex">
             <img src="imagen/facebook.svg" alt="logo facebook" />
