--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="fabrica de churros. Especializada en gustos exóticos, como leberwurst, Roquefort, Nutella, etc."
+    />
+    <meta
+      name="keywords"
+      content="churros, churros el topo, Fabrica de churros, churros salados, churro relleno"
+    />
     <link
       rel="shortcut icon"
       href="imagen/favoritochurros.png"
@@ -119,19 +127,23 @@
               <td class="table_columns">Mitre 360</td>
             </tr>
           </table>
-          <h2>Nuestros comienzos</h2>
-          <div class="card">
-            <section class="card__image">
-              <iframe
-                width="560"
-                height="315"
-                src="https://www.youtube.com/embed/NIEjikGAOn0"
-                title="YouTube video player"
-                frameborder="0"
-                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                allowfullscreen
-              ></iframe>
-            </section>
+          <div class="selection">
+            <h2>Nuestros comienzos</h2>
+            <div class="card">
+              <section class="card__image">
+                <div class="Iframe__contenedor">
+                  <iframe
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/NIEjikGAOn0"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                  ></iframe>
+                </div>
+              </section>
+            </div>
           </div>
         </div>
       </div>
