--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="fabrica de churros. Especializada en gustos exóticos, como leberwurst, Roquefort, Nutella, etc."
+    />
+    <meta
+      name="keywords"
+      content="churros, churros el topo, Fabrica de churros, churros salados, churro relleno"
+    />
     <link rel="stylesheet" href="../CSS/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap"
@@ -40,15 +48,16 @@
             <div class="card">
               <img
                 class="card__image"
-                src="../imagen/churros-clase3.jpeg"
+                src="../imagen/vegano2_page-0001.jpg"
                 alt="churros deliciosos"
               />
             </div>
             <article>
-              <h3 class="subtitule">A churros el topo</h3>
+              <h3 class="subtitule">Churros veganos</h3>
               <p class="text_2">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Placeatautem earum voluptatibus, nisi pariatur quidem?
+                ¿Todavía no probaron nuestros churros veganos? Tenemos simples,
+                con membrillo o con dulce de leche de almendras. Encontralos en
+                nuestras sucursales de CABA, Gesell y Pinamar
               </p>
             </article>
           </div>
@@ -56,15 +65,17 @@
             <div class="card">
               <img
                 class="card__image"
-                src="../imagen/churros-clase3.jpeg"
+                src="../imagen/dialluvia2_page-0001.jpg"
                 alt="churros deliciosos"
               />
             </div>
             <article>
-              <h3 class="subtitule">A churros el topo</h3>
+              <h3 class="subtitule">El día está para unos churros</h3>
               <p class="text_2">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Placeatautem earum voluptatibus, nisi pariatur quidem?
+                Llueve, sale el sol. Que hace frío, que hace calor. No importa
+                el clima, siempre se presta para unos ricos churros. Acercate a
+                nuestras sucursales o, si estás en CABA, pedilos vía
+                @rappiargentina y sacate las ganas.
               </p>
             </article>
           </div>
@@ -72,15 +83,14 @@
             <div class="card">
               <img
                 class="card__image"
-                src="../imagen/churros-clase3.jpeg"
+                src="../imagen/relleno2_page-0001.jpg"
                 alt="churros deliciosos"
               />
             </div>
             <article>
-              <h3 class="subtitule">A churros el topo</h3>
+              <h3 class="subtitule">¿Con cobertura o sin cobertura?</h3>
               <p class="text_2">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
-                autem earum voluptatibus, nisi pariatur quidem?
+                No importa, todos son deliciosos. ¿Cuál es tu favorito?
               </p>
             </article>
           </div>
@@ -88,15 +98,15 @@
             <div class="card">
               <img
                 class="card__image"
-                src="../imagen/churros-clase3.jpeg"
+                src="../imagen/menta2_page-0001.jpg"
                 alt="churros deliciosos"
               />
             </div>
             <article>
-              <h3 class="subtitule">A churros el topo</h3>
+              <h3 class="subtitule">Churros verdes</h3>
               <p class="text_2">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat
-                autem earum voluptatibus, nisi pariatur quidem?
+                ¿Alguna vez les conté que hicimos churros bañado de menta y
+                rellenos con limón? No vendimos ni uno
               </p>
             </article>
           </div>
