--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="fabrica de churros. Especializada en gustos exóticos, como leberwurst, Roquefort, Nutella, etc.">
+        <meta name="keywords" content="churros, churros el topo, Fabrica de churros, churros salados, churro relleno">
         <link rel="shortcut icon" href="imagen/favoritochurros.png" type="image/x-icon">
         <link rel="stylesheet" href="../CSS/style.css">
         <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap" rel="stylesheet">
@@ -30,47 +32,82 @@
             <div class="container">
                 <div class="selection">
                     <h1>Contacto</h1>
-                    <form action="contacto">
-                        <fieldset>
-                            <div class="form__intro">
-                                <legend>Contáctenos</legend>
-                                <div class="form_names">
-                                    <label for="nombre">Nombre</label>
-                                    <input type="text" name="nombre" id="nombre">
-                                    <label for="Apellido">Apellido</label>
-                                    <input type="text" name="apellido" id="apellido">
-                                    <label for="text">Mail</label>
-                                    <input type="text" name="mail" id="mail">
-                                </div>
-                                <div class="form__gender">
-                                    <div>Hombre</div>
-                                    <input type="radio" name="sexo" value="hombre">
-                                    <div>Mujer</div>
-                                    <input type="radio" name="sexo" value="mujer">
-                                </div>
-                                <div class="form__type">
-                                    <label for="tipo">Tipo de contacto</label>
-                                    <select name="tipo" id="tipo">
-                                        <option value="s">Sugerencias</option>
-                                        <option value="a">Ayuda</option>
-                                        <option value="r">Reclamo</option>
-                                    </select>
-                                </div>
-                                <label for="mensaje">mensaje</label>
-                                <textarea name="mensaje" id="mensaje" cols="30" rows="10"></textarea>
-                                <button class="form__button">
-                                    <input type="submit" value="enviar formulario">
-                                </button>
-                                <button type="reset" class="form__button--reset">
-                                    <input type="reset" value="borrar formulario">
-                                </button>
+                    <form action="https://formsubmit.co/Info@icp.edu.ar" method="POST">
+                        <div class="grid-container_red">
+                          <div class="item1_red">
+                            <div class="col-6">
+                              <h3>
+                                ¿Querés contactarte con nosotros? <br />Es el momento de empezar
+                              </h3>
+                              <p class="col-6 rojo__2">
+                                Completá el formulario de contacto y <br />
+                                te enviaremos informacíon a la brevedad
+                              </p>
                             </div>
-                        </fieldset>
-                    </form>
+                          </div>
+                          <div class="item2_red">
+                            <div class="col-6 rojo__2"></div>
+                          </div>
+                          <div class="item3_red">
+                            <label for="nombre" class="form-label"></label>
+                            <input
+                              type="text"
+                              name="name"
+                              class="form-control"
+                              id="nombre"
+                              placeholder="nombre"
+                            />
+                          </div>
+                          <div class="item4_red">
+                            <label for="telefono" class="form-label"></label>
+                            <input
+                              type="text"
+                              name="telefono"
+                              class="form-control"
+                              id="telefono"
+                              placeholder="teléfono"
+                            />
+                          </div>
+                          <div class="item5_red">
+                            <label for="email" class="form-label"></label>
+                            <input
+                              type="email"
+                              name="email"
+                              class="form-control"
+                              id="email"
+                              placeholder="name@example.com"
+                            />
+                          </div>
+                          <div class="item6_red">
+                            <label for="mensaje" class="form-label"></label>
+                            <textarea
+                              class="form-control"
+                              name="mensaje"
+                              id="mensaje"
+                              rows="3"
+                            ></textarea>
+                          </div>
+                          <div class="item7_red">
+                            <input
+                              class="btn btn-primary btn-light"
+                              type="submit"
+                              value="enviar"
+                            />
+                          </div>
+                          <div class="item8_red">
+                            <input
+                              class="btn btn-primary btn-light btn-outline-danger"
+                              type="reset"
+                              value="Reset"
+                            />
+                          </div>
+                        </div>
+                      </form>
+
                 </div>
             </div>
         </main>
-        <section class="intro_section">
+        <section class="download">
             <div class="container">
                 <h4 class="download_title">Descargas</h4>
                 <div class="download_logobox">
