--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="fabrica de churros. Especializada en gustos exóticos, como leberwurst, Roquefort, Nutella, etc."
+    />
+    <meta
+      name="keywords"
+      content="churros, churros el topo, Fabrica de churros, churros salados, churro relleno"
+    />
     <link rel="stylesheet" href="../CSS/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap"
