agergo vinculos a twitter, facebook, instagram

--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -137,9 +137,15 @@
         <p class="footer_text2">pedi por pedidos ya</p>
         <div class="footer_icons">
           <div class="footer_icons_flex">
-            <img src="../imagen/facebook.svg" alt="logo facebook" />
-            <img src="../imagen/instagram.svg" alt="logo instagram" />
-            <img src="../imagen/twitter.svg" alt="logo twitter" />
+            <a href="https://www.facebook.com/eltopocaba"
+              ><img src="../imagen/facebook.svg" alt="logo facebook"
+            /></a>
+            <a href="https://www.instagram.com/churroseltopo/"
+              ><img src="../imagen/instagram.svg" alt="logo instagram"
+            /></a>
+            <a href="https://twitter.com/churreriaeltopo"
+              ><img src="../imagen/twitter.svg" alt="logo twitter"
+            /></a>
           </div>
         </div>
         <div class="footer_copyright">
