solucionado tamaño vido resposive, agregado enlaces a store

--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -117,9 +117,16 @@
       <div class="container">
         <h4 class="download_title">Descargas</h4>
         <div class="download_logobox">
-          <img src="../imagen/playstore.png" alt="logo playstore" />
-          <img src="../imagen/app-store.png" alt="logo appstore" />
-          <img src="../imagen/windows.png" alt="logo windows" />
+          <a href="https://play.google.com/store/apps?hl=es"
+            ><img src="../imagen/playstore.png" alt="logo playstore"
+          /></a>
+          <a href="https://www.apple.com/store"
+            ><img src="../imagen/app-store.png" alt="logo appstore"
+          /></a>
+          <a
+            href="https://www.microsoft.com/es-ar/?gclid=CjwKCAiAkrWdBhBkEiwAZ9cdcCb5E6Lrr11ChIkoOYL-RMHW_ZOYISH42VeI8CIe9Lo_PhpVw2jB0BoCz_gQAvD_BwE"
+            ><img src="../imagen/windows.png" alt="logo windows"
+          /></a>
         </div>
       </div>
     </section>
