--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -22,6 +22,12 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"
+      crossorigin="anonymous"
+    />
     <title>Nosotros</title>
   </head>
   <body>
@@ -132,15 +138,17 @@
             <div class="card">
               <section class="card__image">
                 <div class="Iframe__contenedor">
-                  <iframe
-                    width="560"
-                    height="315"
-                    src="https://www.youtube.com/embed/NIEjikGAOn0"
-                    title="YouTube video player"
-                    frameborder="0"
-                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                    allowfullscreen
-                  ></iframe>
+                  <div class="ratio ratio-16x9">
+                    <iframe
+                      width="560"
+                      height="315"
+                      src="https://www.youtube.com/embed/NIEjikGAOn0"
+                      title="YouTube video player"
+                      frameborder="0"
+                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                      allowfullscreen
+                    ></iframe>
+                  </div>
                 </div>
               </section>
             </div>
@@ -152,9 +160,16 @@
       <div class="container">
         <h4 class="download_title">Descargas</h4>
         <div class="download_logobox">
-          <img src="../imagen/playstore.png" alt="logo playstore" />
-          <img src="../imagen/app-store.png" alt="logo appstore" />
-          <img src="../imagen/windows.png" alt="logo windows" />
+          <a href="https://play.google.com/store/apps?hl=es"
+            ><img src="../imagen/playstore.png" alt="logo playstore"
+          /></a>
+          <a href="https://www.apple.com/store"
+            ><img src="../imagen/app-store.png" alt="logo appstore"
+          /></a>
+          <a
+            href="https://www.microsoft.com/es-ar/?gclid=CjwKCAiAkrWdBhBkEiwAZ9cdcCb5E6Lrr11ChIkoOYL-RMHW_ZOYISH42VeI8CIe9Lo_PhpVw2jB0BoCz_gQAvD_BwE"
+            ><img src="../imagen/windows.png" alt="logo windows"
+          /></a>
         </div>
       </div>
     </section>
@@ -193,4 +208,9 @@
     </footer>
     <!-- Footer Section End Here -->
   </body>
+  <script
+    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+    crossorigin="anonymous"
+  ></script>
 </html>
