--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -137,18 +137,16 @@
             <h2>Nuestros comienzos</h2>
             <div class="card">
               <section class="card__image">
-                <div class="Iframe__contenedor">
-                  <div class="ratio ratio-16x9">
-                    <iframe
-                      width="560"
-                      height="315"
-                      src="https://www.youtube.com/embed/NIEjikGAOn0"
-                      title="YouTube video player"
-                      frameborder="0"
-                      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                      allowfullscreen
-                    ></iframe>
-                  </div>
+                <div class="ratio ratio-16x9">
+                  <iframe
+                    width="560"
+                    height="315"
+                    src="https://www.youtube.com/embed/NIEjikGAOn0"
+                    title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen
+                  ></iframe>
                 </div>
               </section>
             </div>
@@ -160,16 +158,9 @@
       <div class="container">
         <h4 class="download_title">Descargas</h4>
         <div class="download_logobox">
-          <a href="https://play.google.com/store/apps?hl=es"
-            ><img src="../imagen/playstore.png" alt="logo playstore"
-          /></a>
-          <a href="https://www.apple.com/store"
-            ><img src="../imagen/app-store.png" alt="logo appstore"
-          /></a>
-          <a
-            href="https://www.microsoft.com/es-ar/?gclid=CjwKCAiAkrWdBhBkEiwAZ9cdcCb5E6Lrr11ChIkoOYL-RMHW_ZOYISH42VeI8CIe9Lo_PhpVw2jB0BoCz_gQAvD_BwE"
-            ><img src="../imagen/windows.png" alt="logo windows"
-          /></a>
+          <img src="../imagen/windows.png" alt="" />
+          <img src="../imagen/playstore.png" alt="" />
+          <img src="../imagen/app-store.png" alt="" />
         </div>
       </div>
     </section>
@@ -207,10 +198,10 @@
       </div>
     </footer>
     <!-- Footer Section End Here -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+      crossorigin="anonymous"
+    ></script>
   </body>
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-    crossorigin="anonymous"
-  ></script>
 </html>
