se agregan logos de rappi y pedidos ya

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -35,18 +35,16 @@
                     <form action="https://formsubmit.co/Info@icp.edu.ar" method="POST">
                         <div class="grid-container_red">
                           <div class="item1_red">
-                            <div class="col-6">
-                              <h3>
-                                ¿Querés contactarte con nosotros? <br />Es el momento de empezar
-                              </h3>
-                              <p class="col-6 rojo__2">
-                                Completá el formulario de contacto y <br />
-                                te enviaremos informacíon a la brevedad
-                              </p>
-                            </div>
+                            <h3>
+                              ¿Querés contactarte con nosotros? <br />Es el momento de empezar
+                            </h3>
+          
                           </div>
                           <div class="item2_red">
-                            <div class="col-6 rojo__2"></div>
+                            <p class="rojo__2">
+                              Completá el formulario de contacto y <br />
+                              te enviaremos informacíon a la brevedad
+                            </p>
                           </div>
                           <div class="item3_red">
                             <label for="nombre" class="form-label"></label>
@@ -109,11 +107,10 @@
         </main>
         <section class="download">
             <div class="container">
-                <h4 class="download_title">Descargas</h4>
+                <h4 class="download_title">Pedilos por</h4>
                 <div class="download_logobox">
-                  <a href="https://play.google.com/store/apps?hl=es"><img src="../imagen/playstore.png" alt="logo playstore" /></a>
-                  <a href="https://www.apple.com/store"><img src="../imagen/app-store.png" alt="logo appstore" /></a>
-                  <a href="https://www.microsoft.com/es-ar/?gclid=CjwKCAiAkrWdBhBkEiwAZ9cdcCb5E6Lrr11ChIkoOYL-RMHW_ZOYISH42VeI8CIe9Lo_PhpVw2jB0BoCz_gQAvD_BwE"><img src="../imagen/windows.png" alt="logo windows" /></a>
+                  <img src="../imagen/rappi-seeklogo.png" alt="logo rappi" />
+                  <img src="../imagen/pedidos-ya-seeklogo.png" alt="logo pedidos ya" />
                 </div>
             </div>
         </section>
