--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -156,11 +156,10 @@
     </main>
     <section class="download">
       <div class="container">
-        <h4 class="download_title">Descargas</h4>
+        <h4 class="download_title">Pedilos por</h4>
         <div class="download_logobox">
-          <img src="../imagen/windows.png" alt="" />
-          <img src="../imagen/playstore.png" alt="" />
-          <img src="../imagen/app-store.png" alt="" />
+          <img src="../imagen/rappi-seeklogo.png" alt="logo rappi" />
+          <img src="../imagen/pedidos-ya-seeklogo.png" alt="logo pedidos ya" />
         </div>
       </div>
     </section>
