--- a/pages/noticias.html
+++ b/pages/noticias.html
@@ -115,18 +115,10 @@
     </main>
     <section class="download">
       <div class="container">
-        <h4 class="download_title">Descargas</h4>
+        <h4 class="download_title">Pedilos por</h4>
         <div class="download_logobox">
-          <a href="https://play.google.com/store/apps?hl=es"
-            ><img src="../imagen/playstore.png" alt="logo playstore"
-          /></a>
-          <a href="https://www.apple.com/store"
-            ><img src="../imagen/app-store.png" alt="logo appstore"
-          /></a>
-          <a
-            href="https://www.microsoft.com/es-ar/?gclid=CjwKCAiAkrWdBhBkEiwAZ9cdcCb5E6Lrr11ChIkoOYL-RMHW_ZOYISH42VeI8CIe9Lo_PhpVw2jB0BoCz_gQAvD_BwE"
-            ><img src="../imagen/windows.png" alt="logo windows"
-          /></a>
+          <img src="../imagen/rappi-seeklogo.png" alt="logo rappi" />
+          <img src="../imagen/pedidos-ya-seeklogo.png" alt="logo pedidos ya" />
         </div>
       </div>
     </section>
